2015-04-16:
- Bug fixes.
2015-01-14:
- Fixed Monte Carlo simulations that had been broken in a previous version.
- Monte Carlo simulation windows should now work as expected.
- Removed the strict localization option when using simulation window "profile +
  shell".
- Most functions in class ProfileData are now semiprivate.
- Further code cleanup.
- Various other small changes and bug fixes.
2014-11-11:
- A rather comprehensive code cleanup.
- Various other small changes and bug fixes.
- License changed to the MIT license.
2014-05-14:
- In the output files for random and grid points, output values were for the
  'real' point list rather than for the random or grid point lists. This has now
  been fixed.
- For Monte Carlo simulations, fixed a bug that caused simulated particles within
  profile holes to be accepted as valid when simulation window was set to
  "profile + shell".
- View file dialog is now properly destroyed when closed.
- PyExcelerator is again included in the Window binaries.
2014-01-24:
- Fixed a bug that caused a failure to execute when using the latest version
  of wxPython. 
2012-07-12:
- Fixed a bug, reported by Megan Dowie, that generated an error when trying to 
  calculate interpoint distances from an input file that does not contain random 
  points.
2011-10-14:
- Fixed a bug that caused the number of holes to always be shown as 0 in the
  log, and prevented them from being validated with respect to crossing 
  vertices (the holes were correctly accounted for in the output data though).
- Fixed a bug that prevented certain options that should be reset between runs
  from actually being so.
2010-10-07:
- Allows PARTICLES as a synonym for the keyword POINTS in coordinate files to
  accommodate for an old plugin (ParticleDensityRandomBox).
2010-09-02:
- Fixed a bug that prevented some options from being loaded from the
  configuration file.
2010-08-17:
- Because also random points and other particle-like points are instances of the