@@ -11,11 +11,11 @@ patterns.
 PointDensity.py is used in conjunction with its companion ImageJ plugin,
 PointDensity_.java.
 
-Please see the `website <http://www.hu.liu.se/forskning/larsson-max/software>`_ 
+Please see the `website <http://www.liu.se/medfak/forskning/larsson-max/software>`_
 for more information.
 
 License
 -------
-Copyright 2001-2014 Max Larsson `(max.larsson@liu.se) <mailto:max.larsson@liu.se>`_
+Copyright 2001-2018 Max Larsson `(max.larsson@liu.se) <mailto:max.larsson@liu.se>`_
 
 PointDensity.py is released under the MIT license.
