@@ -1,3 +1,8 @@
+2018-04-20:
+- Added Feret diameter to profile output.
+- Minor bug fixes and code cleanup.
+2018-04-19:
+- Now works with Python 3 instead of Python 2.
 2015-04-16:
 - Bug fixes.
 2015-01-14:
